GlobalExceptionHandler and restrepostories

--- a/BackendWorkspace/backenkAPP/src/main/resources/application.properties
+++ b/BackendWorkspace/backenkAPP/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8090/auth/realms/t2/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8090/auth/realms/p2/protocol/openid-connect/certs
+
+spring.datasource.url=jdbc:mysql://localhost:3306/backend_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
