--- a/BackendWorkspace/backenkAPP/src/main/resources/application.properties
+++ b/BackendWorkspace/backenkAPP/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8090/auth/realms/p2/protocol/openid-connect/certs
+server.port=8080
+spring.application.name=levelzero
+spring.config.import=optional:configserver:http://localhost:8888
 
-spring.datasource.url=jdbc:mysql://localhost:3306/backend_db
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.cloud.config.profile=dev
+
+
+
+spring.cloud.config.username=Admin
+spring.cloud.config.password=Admin
